fix multiple linear regression

--- a/ml/supervised/regression/multiple-linear/multiple-linear.ipynb
+++ b/ml/supervised/regression/multiple-linear/multiple-linear.ipynb
@@ -478,10 +478,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Coefficients:  [[9.89527747 7.5745897  6.5363466  2.95989154]]\n",
+      "Residual sum of squares: 604.39\n",
+      "Variance score: 0.85\n"
+     ]
+    }
+   ],
+   "source": [
+    "regr = linear_model.LinearRegression() # make linear regression model object\n",
+    "x = np.asanyarray(train[['ENGINESIZE','CYLINDERS','FUELCONSUMPTION_CITY','FUELCONSUMPTION_HWY']]) # get x values for training\n",
+    "y = np.asanyarray(train[['CO2EMISSIONS']]) # get y values for training\n",
+    "regr.fit(x, y) # fit x data to y data\n",
+    "print ('Coefficients: ', regr.coef_) # print coefficients\n",
+    "y_hat = regr.predict(test[['ENGINESIZE','CYLINDERS','FUELCONSUMPTION_CITY','FUELCONSUMPTION_HWY']]) # get predictions from testing data\n",
+    "x = np.asanyarray(test[['ENGINESIZE','CYLINDERS','FUELCONSUMPTION_CITY','FUELCONSUMPTION_HWY']]) # get x values for testing\n",
+    "y = np.asanyarray(test[['CO2EMISSIONS']]) # get y values for testing\n",
+    "print(\"Residual sum of squares: %.2f\" % np.mean((y_hat - y) ** 2)) # get error (MSE) of model\n",
+    "print('Variance score: %.2f' % regr.score(x, y)) # Explained variance score: 1 is perfect prediction"
+   ]
   }
  ],
  "metadata": {
